--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.25.0
+streamlit
 google-generativeai
-numpy==1.24.3
-matplotlib==3.8.0
-pandas==1.5.3
-scikit-learn==1.3.0
+numpy
+matplotlib
+pandas
+scikit-learn
 dotenv
 PyPDF2
 keras
